src/main/webapp/css/multi-event-log-plugin.css
@charset "ISO-8859-1";

.main-window{
	background: #F3F3F3;
}

.banner{
	background-image:url('https://apromore.org/wp-content/uploads/2019/10/cropped-main-banner-img.png');
	height: 113px;
}

.banner-logo{
	height: 100px;
	width: 420px;
	padding: 10px;
}

.card{
	background: white;
	box-shadow: 0 3px 7px 1px rgba(0,0,0,0.05);
	border-radius: 7px;
	padding: 10px;
	position: relative;
}

.left-panel{
	background:#D7D7D7;
	padding: 10px;
	height: 100%;
	text-align: center;
	box-shadow: 0 3px 7px 1px rgba(0,0,0,0.05);
	border-radius: 7px;
	border: 1px solid #8c8c8c;
	position: relative;
}

.top-right-panel{
	background: #F2F2F2;
	text-align: center;
	overflow: auto;
}

.bottom-right-panel{
	height: 300px;
	width: 900px;
	background: #FFFFFF;
	text-align: center;
}

.button-area{
	padding-bottom:40px;
}

.heading{
	font-size:18pt;
}

.input-table-scroll-area{
	width: 700px;
	height: 300px;
	border: 1px solid black;
	overflow: auto;
}

